main/default/objects/Platform_Lead__c/Platform_Lead__c.object-meta.xml
<CustomObject>
    <label>Platform Lead</label>
    <nameField>
        <displayFormat>PL-{0000000}</displayFormat>
        <label>Platform Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>