main/default/objects/Platform_Lead__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Platform Leads</relationshipLabel>
    <relationshipName>Platform_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>