main/default/objects/Platform_Lead__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Platform Leads</relationshipLabel>
    <relationshipName>Platform_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>