main/default/objects/Platform_Lead__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Platform Leads</relationshipLabel>
    <relationshipName>Platform_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>